general Manager dashBoard APIs

--- a/Pages/dash-Boards/generalManagerDashboard.html
+++ b/Pages/dash-Boards/generalManagerDashboard.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="../../Assets/Styles/dash-Boards/administrativeSupervisorDashboard.css">
     <link rel="stylesheet" href="../../Assets/Styles/sharedLayout.css">
     <link rel="stylesheet" href="../../Assets/Styles/dashboards.css">
     <title>General Manager Dashboard - Move Smart</title>
 </head>
+
 <body>
     <div class="topbar">
         <div class="profile">
@@ -54,27 +58,184 @@
 
     <div class="content" id="content">
         <h2>مرحبًا بك في لوحة تحكم المدير العام</h2>
-        <div class="dashboard-stats">
-            <!-- Add your dashboard statistics and widgets here -->
+
+        <div class="dashboard-grid">
+            <!-- كارت السائقين -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>نظرة عامة على السائقين</h2>
+                <div class="card-content">
+                    <canvas id="driverChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي السائقين</td>
+                                <td id="total-drivers"></td>
+                            </tr>
+                            <tr>
+                                <td>أمر شغل <span class="dot orange"></span></td>
+                                <td id="working-drivers"></td>
+                            </tr>
+                            <tr>
+                                <td>متاح <span class="dot green"></span></td>
+                                <td id="available-drivers"></td>
+                            </tr>
+                            <tr>
+                                <td>إجازة <span class="dot red"></span></td>
+                                <td id="onleave-drivers"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت السيارات -->
+            <div class="card">
+                <h2>السيارات</h2>
+                <div class="card-content">
+                    <canvas id="carChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>متاحة</td>
+                                <td id="cars-available">0</td>
+                            </tr>
+                            <tr>
+                                <td>أمر شغل</td>
+                                <td id="cars-working">0</td>
+                            </tr>
+                            <tr>
+                                <td>طور صيانة</td>
+                                <td id="cars-maintenance">0</td>
+                            </tr>
+                            <tr>
+                                <td>إجمالي</td>
+                                <td id="total-cars">0</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت الطلبات -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>الطلبات</h2>
+                <div class="card-content">
+                    <canvas id="orderChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي الطلبات</td>
+                                <td id="total-orders"></td>
+                            </tr>
+                            <tr>
+                                <td>انتظار <span class="dot orange"></span></td>
+                                <td id="orders-pending"></td>
+                            </tr>
+                            <tr>
+                                <td>موافقة <span class="dot green"></span></td>
+                                <td id="orders-approved"></td>
+                            </tr>
+                            <tr>
+                                <td>مرفوض <span class="dot red"></span></td>
+                                <td id="orders-rejected"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت المستهلكات -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>المستهلكات</h2>
+                <div class="card-content">
+                    <canvas id="consumableChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي المستهلكات</td>
+                                <td id="total-consumables"></td>
+                            </tr>
+                            <tr>
+                                <td>متوفر <span class="dot green"></span></td>
+                                <td id="consumables-available"></td>
+                            </tr>
+                            <tr>
+                                <td>مستهلك <span class="dot red"></span></td>
+                                <td id="consumables-used"></td>
+                            </tr>
+                            <tr>
+                                <td>في الطلب <span class="dot orange"></span></td>
+                                <td id="consumables-inorder"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت قطع الغيار -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>قطع الغيار</h2>
+                <div class="card-content">
+                    <canvas id="sparePartChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي قطع الغيار</td>
+                                <td id="total-spareParts"></td>
+                            </tr>
+                            <tr>
+                                <td>متوفر <span class="dot green"></span></td>
+                                <td id="spareParts-available"></td>
+                            </tr>
+                            <tr>
+                                <td>مستهلك <span class="dot red"></span></td>
+                                <td id="spareParts-used"></td>
+                            </tr>
+                            <tr>
+                                <td>في الطلب <span class="dot orange"></span></td>
+                                <td id="spareParts-inorder"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت التقارير -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>التقارير</h2>
+                <div class="card-content">
+                    <canvas id="reportChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي التقارير</td>
+                                <td id="total-reports"></td>
+                            </tr>
+                            <tr>
+                                <td>نوع تقرير <span class="dot orange"></span></td>
+                                <td id="report-type1"></td>
+                            </tr>
+                            <tr>
+                                <td>نوع تقرير <span class="dot green"></span></td>
+                                <td id="report-type2"></td>
+                            </tr>
+                            <tr>
+                                <td>نوع تقرير <span class="dot red"></span></td>
+                                <td id="report-type3"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const token = localStorage.getItem('token');
-            const userRole = localStorage.getItem('userRole');
-            
-            if (!token) {
-                window.location.href = '../Login.html';
-                return;
-            }
-
-            if (userRole !== 'GeneralManager') {
-                window.location.href = `${userRole.toLowerCase()}Dashboard.html`;
-                return;
-            }
-        });
-    </script>
-    <script src="../../Java script/dashboards.js"></script>
 </body>
-</html> 
+<script src="../../Java script/dashboards.js"></script>
+<script src="../../Java script/dash-Boards/generalManagerDashboard.js"></script>
+
+</html>
