Add university logo to the login page & add favicon to the website tab

--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Move Smart</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../Assets/Images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../Assets/Images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="../Assets/Images/favicon_io/apple-touch-icon.png">
+    
     <link rel="stylesheet" href="../Assets/Styles/login.css">
 
   
 </head>
 <body class="login">
     <div class="login-container">
+        <img src="../Assets/Images/assiut-university-logo.svg" alt="شعار جامعة أسيوط" class="university-logo">
         <p class="login-header">تسجيل الدخول</p>
         <p class="login-subheader">مرحبا</p>
         <p class="login-description">الرجاء ادخال بيانات الاعتماد الخاصة بك</p>
