workShop,generalSupervisor dashBoards APIs

--- a/Pages/dash-Boards/administrativeSupervisorDashboard.html
+++ b/Pages/dash-Boards/administrativeSupervisorDashboard.html
@@ -201,5 +201,7 @@
         <script src="../../Java script/dash-Boards/administrativeSupervisorDashboard.js"></script>
         <script src="../../Java script/dashboards.js"></script>
 </body>
-
+<footer>
+    <p>جميع الحقوق محفوظة &copy; 2023 Move Smart</p>
+</footer>
 </html>
