--- a/Pages/dash-Boards/generalManagerDashboard.html
+++ b/Pages/dash-Boards/generalManagerDashboard.html
@@ -235,6 +235,9 @@
 
         </div>
 </body>
+<footer>
+    <p>جميع الحقوق محفوظة &copy; 2023 Move Smart</p>
+</footer>
 <script src="../../Java script/dashboards.js"></script>
 <script src="../../Java script/dash-Boards/generalManagerDashboard.js"></script>
 
