--- a/Pages/dash-Boards/generalSupervisorDashboard.html
+++ b/Pages/dash-Boards/generalSupervisorDashboard.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="../../Assets/Styles/dash-Boards/administrativeSupervisorDashboard.css">
     <link rel="stylesheet" href="../../Assets/Styles/sharedLayout.css">
     <link rel="stylesheet" href="../../Assets/Styles/dashboards.css">
     <title>General Supervisor Dashboard - Move Smart</title>
@@ -48,27 +50,126 @@
 
     <div class="content" id="content">
         <h2>مرحبًا بك في لوحة تحكم المشرف العام</h2>
-        <div class="dashboard-stats">
-            <!-- Add your dashboard statistics and widgets here -->
-        </div>
+       
+            <div class="dashboard-grid">
+            <!-- كارت السائقين -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>نظرة عامة على السائقين</h2>
+                <div class="card-content">
+                    <canvas id="driverChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي السائقين</td>
+                                <td id="total-drivers"></td>
+                            </tr>
+                            <tr>
+                                <td>أمر شغل <span class="dot orange"></span></td>
+                                <td id="working-drivers"></td>
+                            </tr>
+                            <tr>
+                                <td>متاح <span class="dot green"></span></td>
+                                <td id="available-drivers"></td>
+                            </tr>
+                            <tr>
+                                <td>إجازة <span class="dot red"></span></td>
+                                <td id="onleave-drivers"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت السيارات -->
+            <div class="card">
+                <h2>السيارات</h2>
+                <div class="card-content">
+                    <canvas id="carChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>متاحة</td>
+                                <td id="cars-available">0</td>
+                            </tr>
+                            <tr>
+                                <td>أمر شغل</td>
+                                <td id="cars-working">0</td>
+                            </tr>
+                            <tr>
+                                <td>طور صيانة</td>
+                                <td id="cars-maintenance">0</td>
+                            </tr>
+                            <tr>
+                                <td>إجمالي</td>
+                                <td id="total-cars">0</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- كارت الطلبات -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>الطلبات</h2>
+                <div class="card-content">
+                    <canvas id="orderChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي الطلبات</td>
+                                <td id="total-orders"></td>
+                            </tr>
+                            <tr>
+                                <td>انتظار <span class="dot orange"></span></td>
+                                <td id="orders-pending"></td>
+                            </tr>
+                            <tr>
+                                <td>موافقة <span class="dot green"></span></td>
+                                <td id="orders-approved"></td>
+                            </tr>
+                            <tr>
+                                <td>مرفوض <span class="dot red"></span></td>
+                                <td id="orders-rejected"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <!-- كارت التقارير -->
+            <div class="card">
+                <span class="edit-icon">✏️</span>
+                <h2>التقارير</h2>
+                <div class="card-content">
+                    <canvas id="reportChart"></canvas>
+                    <div class="card-details">
+                        <table class="card-table">
+                            <tr>
+                                <td>إجمالي التقارير</td>
+                                <td id="total-reports"></td>
+                            </tr>
+                            <tr>
+                                <td>نوع تقرير <span class="dot orange"></span></td>
+                                <td id="report-type1"></td>
+                            </tr>
+                            <tr>
+                                <td>نوع تقرير <span class="dot green"></span></td>
+                                <td id="report-type2"></td>
+                            </tr>
+                            <tr>
+                                <td>نوع تقرير <span class="dot red"></span></td>
+                                <td id="report-type3"></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const token = localStorage.getItem('token');
-            const userRole = localStorage.getItem('userRole');
-            
-            if (!token) {
-                window.location.href = '../Login.html';
-                return;
-            }
-
-            if (userRole !== 'GeneralSupervisor') {
-                window.location.href = `${userRole.toLowerCase()}Dashboard.html`;
-                return;
-            }
-        });
-    </script>
-    <script src="../../Java script/dashboards.js"></script>
 </body>
+<footer>
+    <p>جميع الحقوق محفوظة &copy; 2023 Move Smart</p>
+</footer>
+<script src="../../Java script/dash-Boards/generalSupervisorDashboard.js"></script>
+<script src="../../Java script/dashboards.js"></script>
 </html> 
