--- a/Pages/dash-Boards/workshopSupervisorDashboard.html
+++ b/Pages/dash-Boards/workshopSupervisorDashboard.html
@@ -1,77 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../Assets/Styles/sharedLayout.css">
-    <link rel="stylesheet" href="../../Assets/Styles/dashboards.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link
+      rel="stylesheet"
+      href="../../Assets/Styles/dash-Boards/administrativeSupervisorDashboard.css"
+    />
+    <link rel="stylesheet" href="../../Assets/Styles/sharedLayout.css" />
+    <link rel="stylesheet" href="../../Assets/Styles/dashboards.css" />
     <title>Workshop Supervisor Dashboard - Move Smart</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="topbar">
-        <div class="profile">
-            <span id="userName">Loading...</span>
-            <img src="../../Assets/Images/users.svg" alt="User" />
-            <button id="logoutButton" class="logout-button">
-                <img src="../../Assets/Images/logout.svg" alt="Logout" />
-            </button>
-        </div>
-        <button><img class="notification" src="../../Assets/Images/bell.svg" alt="" /></button>
-        <div class="search-container">
-            <input type="text" placeholder="بحـث..." />
-            <img src="../../Assets/Images/search.svg" alt="Search" />
-        </div>
+      <div class="profile">
+        <span id="userName">Loading...</span>
+        <img src="../../Assets/Images/users.svg" alt="User" />
+        <button id="logoutButton" class="logout-button">
+          <img src="../../Assets/Images/logout.svg" alt="Logout" />
+        </button>
+      </div>
+      <button>
+        <img class="notification" src="../../Assets/Images/bell.svg" alt="" />
+      </button>
+      <div class="search-container">
+        <input type="text" placeholder="بحـث..." />
+        <img src="../../Assets/Images/search.svg" alt="Search" />
+      </div>
     </div>
 
     <div class="sidebar">
-        <h2 class="logo">Move Smart</h2>
-        <h2 class="logo">نظام التحكم في السيارات</h2>
-        <button class="create-order">إنشاء طلب</button>
-        <ul class="menu">
-            <li class="active" onclick="changeContent('home')">
-                <img src="../../Assets/Images/home.svg" alt="" /> الصفحة الرئيسية
-            </li>
-            <li onclick="changeContent('cars')">
-                <img src="../../Assets/Images/cars.svg" alt="" /> السيارات
-            </li>
-            <li onclick="changeContent('orders')">
-                <img src="../../Assets/Images/document.svg" alt="" /> الطلبات
-            </li>
-            <li onclick="changeContent('consumables')">
-                <img src="../../Assets/Images/car-mechanic.svg" alt="" /> المستهلكات
-            </li>
-            <li onclick="changeContent('spareParts')">
-                <img src="../../Assets/Images/repair-alt.svg" alt="" /> قطع الغيار
-            </li>
-            <li onclick="changeContent('reports')">
-                <img src="../../Assets/Images/chart-pie.svg" alt="" />التقارير
-            </li>
-        </ul>
+      <h2 class="logo">Move Smart</h2>
+      <h2 class="logo">نظام التحكم في السيارات</h2>
+      <button class="create-order">إنشاء طلب</button>
+      <ul class="menu">
+        <li class="active" onclick="changeContent('home')">
+          <img src="../../Assets/Images/home.svg" alt="" /> الصفحة الرئيسية
+        </li>
+        <li onclick="changeContent('cars')">
+          <img src="../../Assets/Images/cars.svg" alt="" /> السيارات
+        </li>
+        <li onclick="changeContent('orders')">
+          <img src="../../Assets/Images/document.svg" alt="" /> الطلبات
+        </li>
+        <li onclick="changeContent('consumables')">
+          <img src="../../Assets/Images/car-mechanic.svg" alt="" /> المستهلكات
+        </li>
+        <li onclick="changeContent('spareParts')">
+          <img src="../../Assets/Images/repair-alt.svg" alt="" /> قطع الغيار
+        </li>
+        <li onclick="changeContent('reports')">
+          <img src="../../Assets/Images/chart-pie.svg" alt="" />التقارير
+        </li>
+      </ul>
     </div>
 
     <div class="content" id="content">
-        <h2>مرحبًا بك في لوحة تحكم مشرف الورشة</h2>
-        <div class="dashboard-stats">
-            <!-- Add your dashboard statistics and widgets here -->
+      <h2>مرحبًا بك في لوحة تحكم مشرف الورشة</h2>
+      <div class="dashboard-grid">
+        <!-- كارت السيارات -->
+        <div class="card">
+          <h2>السيارات</h2>
+          <div class="card-content">
+            <canvas id="carChart"></canvas>
+            <div class="card-details">
+              <table class="card-table">
+                <tr>
+                  <td>متاحة</td>
+                  <td id="cars-available">0</td>
+                </tr>
+                <tr>
+                  <td>أمر شغل</td>
+                  <td id="cars-working">0</td>
+                </tr>
+                <tr>
+                  <td>طور صيانة</td>
+                  <td id="cars-maintenance">0</td>
+                </tr>
+                <tr>
+                  <td>إجمالي</td>
+                  <td id="total-cars">0</td>
+                </tr>
+              </table>
+            </div>
+          </div>
         </div>
+
+        <!-- كارت الطلبات -->
+        <div class="card">
+          <span class="edit-icon">✏️</span>
+          <h2>الطلبات</h2>
+          <div class="card-content">
+            <canvas id="orderChart"></canvas>
+            <div class="card-details">
+              <table class="card-table">
+                <tr>
+                  <td>إجمالي الطلبات</td>
+                  <td id="total-orders"></td>
+                </tr>
+                <tr>
+                  <td>انتظار <span class="dot orange"></span></td>
+                  <td id="orders-pending"></td>
+                </tr>
+                <tr>
+                  <td>موافقة <span class="dot green"></span></td>
+                  <td id="orders-approved"></td>
+                </tr>
+                <tr>
+                  <td>مرفوض <span class="dot red"></span></td>
+                  <td id="orders-rejected"></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- كارت المستهلكات -->
+        <div class="card">
+          <span class="edit-icon">✏️</span>
+          <h2>المستهلكات</h2>
+          <div class="card-content">
+            <canvas id="consumableChart"></canvas>
+            <div class="card-details">
+              <table class="card-table">
+                <tr>
+                  <td>إجمالي المستهلكات</td>
+                  <td id="total-consumables"></td>
+                </tr>
+                <tr>
+                  <td>متوفر <span class="dot green"></span></td>
+                  <td id="consumables-available"></td>
+                </tr>
+                <tr>
+                  <td>مستهلك <span class="dot red"></span></td>
+                  <td id="consumables-used"></td>
+                </tr>
+                <tr>
+                  <td>في الطلب <span class="dot orange"></span></td>
+                  <td id="consumables-inorder"></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- كارت قطع الغيار -->
+        <div class="card">
+          <span class="edit-icon">✏️</span>
+          <h2>قطع الغيار</h2>
+          <div class="card-content">
+            <canvas id="sparePartChart"></canvas>
+            <div class="card-details">
+              <table class="card-table">
+                <tr>
+                  <td>إجمالي قطع الغيار</td>
+                  <td id="total-spareParts"></td>
+                </tr>
+                <tr>
+                  <td>متوفر <span class="dot green"></span></td>
+                  <td id="spareParts-available"></td>
+                </tr>
+                <tr>
+                  <td>مستهلك <span class="dot red"></span></td>
+                  <td id="spareParts-used"></td>
+                </tr>
+                <tr>
+                  <td>في الطلب <span class="dot orange"></span></td>
+                  <td id="spareParts-inorder"></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!-- كارت التقارير -->
+        <div class="card">
+          <span class="edit-icon">✏️</span>
+          <h2>التقارير</h2>
+          <div class="card-content">
+            <canvas id="reportChart"></canvas>
+            <div class="card-details">
+              <table class="card-table">
+                <tr>
+                  <td>إجمالي التقارير</td>
+                  <td id="total-reports"></td>
+                </tr>
+                <tr>
+                  <td>نوع تقرير <span class="dot orange"></span></td>
+                  <td id="report-type1"></td>
+                </tr>
+                <tr>
+                  <td>نوع تقرير <span class="dot green"></span></td>
+                  <td id="report-type2"></td>
+                </tr>
+                <tr>
+                  <td>نوع تقرير <span class="dot red"></span></td>
+                  <td id="report-type3"></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const token = localStorage.getItem('token');
-            const userRole = localStorage.getItem('userRole');
-            
-            if (!token) {
-                window.location.href = '../Login.html';
-                return;
-            }
-
-            if (userRole !== 'WorkshopSupervisor') {
-                window.location.href = `${userRole.toLowerCase()}Dashboard.html`;
-                return;
-            }
-        });
-    </script>
-    <script src="../../Java script/dashboards.js"></script>
-</body>
-</html> 
+  </body>
+  <footer>
+    <p>جميع الحقوق محفوظة &copy; 2023 Move Smart</p>
+  </footer>
+  <script src="../../Java script/dash-Boards/workshopSupervisorDashboard.js"></script>
+  <script src="../../Java script/dashboards.js"></script>
+</html>
