--- a/Pages/dash-Boards/patrolsSupervisorDashboard.html
+++ b/Pages/dash-Boards/patrolsSupervisorDashboard.html
@@ -50,7 +50,7 @@
         <li onclick="changeContent('patrols')">
           <img src="../../Assets/Images/cars.svg" alt="" /> الدوريات
         </li>
-         <li onclick="changeContent('subscriptions')">
+        <li onclick="changeContent('subscriptions')">
           <img src="../../Assets/Images/users.svg" alt="" /> الاشتراكات
         </li>
         <li onclick="changeContent('reports')">
@@ -150,4 +150,7 @@
     <script src="../../Java script/dash-Boards/patrolsSupervisorDashboard.js"></script>
     <script src="../../Java script/dashboards.js"></script>
   </body>
+  <footer>
+    <p>جميع الحقوق محفوظة &copy; 2023 Move Smart</p>
+  </footer>
 </html>
